# ARA-ARA

./: .gitignore  README.md  latest.dump  pyproject.toml  requirements.txt
Ara_Ara/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Ara_Ara/static/css/: material.css  style.css
Ara_Ara/template/: anime.html  base.html  display.html  homepage.html  login.html  register.html
project/: settings.py  urls.py
